# penguin-metrics

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.example.conf  docker-compose.yml  penguin-metrics.service  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: test.yml
penguin_metrics/: __init__.py  __main__.py  app.py  const.py  logging.py
penguin_metrics/collectors/: __init__.py  ac_power.py  base.py  battery.py  binary_sensor.py  container.py  custom.py  custom_binary.py  disk.py  fan.py  gpu.py  network.py  process.py  service.py  system.py  temperature.py
penguin_metrics/config/: __init__.py  lexer.py  loader.py  parser.py  schema.py
penguin_metrics/models/: __init__.py  device.py  sensor.py
penguin_metrics/mqtt/: __init__.py  client.py  homeassistant.py
penguin_metrics/utils/: __init__.py  cgroup.py  docker_api.py  smaps.py
tests/: __init__.py  conftest.py  test_config.py  test_const.py  test_mqtt_config.py
