[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin-metrics"
version = "0.0.1"
description = "Linux system telemetry service that sends data to MQTT, with Home Assistant integration via MQTT Discovery"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.11"
authors = [
    {name = "Alexey Cluster"},
    {name = "Opus 4.5"}
]
keywords = ["mqtt", "home-assistant", "telemetry", "monitoring", "linux", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
    "Topic :: Home Automation",
]
dependencies = [
    "aiomqtt>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
penguin-metrics = "penguin_metrics.__main__:main"

[project.urls]
Homepage = "https://github.com/clusterm/penguin-metrics"
Documentation = "https://github.com/clusterm/penguin-metrics#readme"
Repository = "https://github.com/clusterm/penguin-metrics"
Issues = "https://github.com/clusterm/penguin-metrics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["penguin_metrics*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

